--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 [tool.poetry.dependencies]
 python = ">=3.10, <3.11" 
 requests = "^2.32.3"
+pandas = "^2.2.2"
 
 
 [build-system]
